--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "oada-borg": "dist/index.js"
   },
   "scripts": {
-    "start": "node -r esm-wallaby --enable-source-maps dist/index.js",
+    "start": "node --enable-source-maps dist/index.js",
     "build": "tsc -b",
     "test": "jest"
   },
@@ -19,28 +19,31 @@
     }
   },
   "devDependencies": {
-    "@tsconfig/node16": "^1.0.1",
+    "@tsconfig/node16": "^1.0.2",
     "@types/convict": "^6.1.1",
     "@types/csv-parse": "^1.2.2",
-    "@types/jest": "^26.0.24",
+    "@types/debug": "^4",
+    "@types/jest": "^27.0.2",
     "@types/latlon-geohash": "^2.0.0",
-    "@types/node": "^16.3.2",
-    "@types/prettier": "^2.3.2",
+    "@types/node": "^16.11.6",
+    "@types/prettier": "^2.4.1",
     "@types/string-similarity": "^4.0.0",
     "@types/uuid": "^8.3.1",
-    "@yarnpkg/pnpify": "^3.0.0-rc.10",
-    "jest": "^27.0.6",
-    "prettier": "^2.3.2",
-    "ts-jest": "^27.0.3",
-    "type-fest": "^1.2.2",
-    "typescript": "^4.3.5"
+    "@yarnpkg/sdks": "^2.5.0",
+    "jest": "^27.3.1",
+    "prettier": "^2.4.1",
+    "ts-jest": "^27.0.7",
+    "type-fest": "^2.5.2",
+    "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@oada/client": "^2.4.6",
-    "convict": "^6.2.0",
-    "csv-parse": "^4.16.0",
+    "@oada/client": "^2.6.2",
+    "convict": "^6.2.1",
+    "csv-parse": "^4.16.3",
+    "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "esm-wallaby": "^3.2.25",
+    "fast-glob": "^3.2.7",
     "fast-json-stable-stringify": "^2.1.0",
     "gps-time": "^1.0.8",
     "guess-file-type": "^1.0.1",
@@ -48,10 +51,11 @@
     "ksuid": "^2.0.0",
     "latlon-geohash": "^2.0.0",
     "moment": "^2.29.1",
-    "node-stream-zip": "^1.13.6",
+    "node-stream-zip": "^1.15.0",
     "readable-stream-clone": "^0.0.7",
     "string-similarity": "^4.0.4",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "uuid": "^8.3.2"
-  }
+  },
+  "packageManager": "yarn@3.1.0"
 }
