--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Assimilate data into OADA",
   "main": "dist/index.js",
+  "type": "module",
   "author": "Alex Layton <alex@layton.in>",
   "license": "MIT",
   "bin": {
@@ -42,7 +43,6 @@
     "csv-parse": "^4.16.3",
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
-    "esm-wallaby": "^3.2.25",
     "fast-glob": "^3.2.7",
     "fast-json-stable-stringify": "^2.1.0",
     "gps-time": "^1.0.8",
