--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,8 @@
   },
   "cSpell.words": [
     "KSUID"
-  ]
+  ],
+  "licenser.useSingleLineStyle": false,
+  "licenser.author": "Open Ag Data Alliance",
+  "licenser.license": "MIT"
 }
