--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,9 @@
     "!.yarn/versions": true,
     ".pnp.*": true,
     "# ignore sdk stuff": true,
-    ".vim": true
+    ".vim": true,
+    "**/.yarn": true,
+    "**/.pnp.*": true
   },
   "prettier.prettierPath": ".yarn/sdks/prettier/index.js",
   "typescript.tsdk": ".yarn/sdks/typescript/lib",
@@ -51,9 +53,11 @@
     ".vim": true
   },
   "cSpell.words": [
-    "KSUID"
+    "KSUID",
+    "lons"
   ],
   "licenser.useSingleLineStyle": false,
   "licenser.author": "Open Ag Data Alliance",
-  "licenser.license": "MIT"
+  "licenser.license": "MIT",
+  "eslint.nodePath": ".yarn/sdks"
 }
