--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "start": "node --enable-source-maps dist/index.js",
     "build": "tsc -b",
+    "eslint": "eslint --format pretty .",
     "test": "jest"
   },
   "jest": {
@@ -30,12 +31,38 @@
     "@types/prettier": "^2.4.1",
     "@types/string-similarity": "^4.0.0",
     "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "@yarnpkg/sdks": "^2.5.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-xo": "^0.39.0",
+    "eslint-config-xo-typescript": "^0.47.1",
+    "eslint-formatter-pretty": "^4.1.0",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-plugin-array-func": "^3.1.7",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-github": "^4.3.2",
+    "eslint-plugin-i18n-text": "^1.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^25.2.2",
+    "eslint-plugin-no-constructor-bind": "^2.0.4",
+    "eslint-plugin-no-only-tests": "^2.6.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-optimize-regex": "^1.2.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-regexp": "^1.5.0",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-sonarjs": "^0.10.0",
+    "eslint-plugin-unicorn": "^37.0.1",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
     "type-fest": "^2.5.2",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "xo": "^0.46.3"
   },
   "dependencies": {
     "@oada/client": "^2.6.2",
