--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,7 +54,8 @@
   },
   "cSpell.words": [
     "KSUID",
-    "lons"
+    "lons",
+    "sonarjs"
   ],
   "licenser.useSingleLineStyle": false,
   "licenser.author": "Open Ag Data Alliance",
