--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -31,6 +31,7 @@ plugins:
   - unicorn
   - jest
   - security
+  - no-secrets
   - sonarjs
 
 parser: '@typescript-eslint/parser'
@@ -40,6 +41,12 @@ parserOptions:
   project: './tsconfig.eslint.json'
 
 rules:
+  filenames/match-regex: off
+  unicorn/filename-case: off
+  i18n-text/no-en: off
+  eslint-comments/no-use: off
+  no-secrets/no-secrets: error
+  no-empty-label: off
   no-warning-comments: off
   node/no-missing-import: off
   import/no-unresolved: off
@@ -52,6 +59,7 @@ rules:
       {allowSeparatedGroups: true}
     ]
   '@typescript-eslint/restrict-template-expressions': off
+  '@typescript-eslint/no-shadow': warn
   '@typescript-eslint/naming-convention':
     [
       error,
