--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,18 @@
 {
   "search.exclude": {
+    "tags.*": true,
+    ".dccache": true,
+    ".history": true,
     "node_modules": true,
     "package.lock": true,
-    ".nvimlog": true,
     "*.log": true,
     ".DS_Store": true,
-    "# TypeScript": true,
     "dist": true,
     "*.tsbuildinfo": true,
-    "# Docker overrides": true,
-    "docker-compose.override.yml": true,
-    ".env": true,
-    "# Ignore act stuff?": true,
     ".actrc": true,
-    "act/": true,
-    "# yarn 2 stuff": true,
-    ".yarn/*": true,
-    "!.yarn/releases": true,
-    "!.yarn/plugins": true,
-    "!.yarn/versions": true,
+    "act": true,
+    ".yarn": true,
     ".pnp.*": true,
-    "# ignore sdk stuff": true,
     ".vim": true,
     "**/.yarn": true,
     "**/.pnp.*": true
@@ -28,37 +20,38 @@
   "prettier.prettierPath": ".yarn/sdks/prettier/index.js",
   "typescript.tsdk": ".yarn/sdks/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
+  "eslint.nodePath": ".yarn/sdks",
   "files.exclude": {
+    "tags.*": true,
+    ".dccache": true,
+    ".history": true,
     "node_modules": true,
     "package.lock": true,
-    ".nvimlog": true,
     "*.log": true,
     ".DS_Store": true,
-    "# TypeScript": true,
     "dist": true,
     "*.tsbuildinfo": true,
-    "# Docker overrides": true,
-    "docker-compose.override.yml": true,
-    ".env": true,
-    "# Ignore act stuff?": true,
     ".actrc": true,
-    "act/": true,
-    "# yarn 2 stuff": true,
-    ".yarn/*": true,
-    "!.yarn/releases": true,
-    "!.yarn/plugins": true,
-    "!.yarn/versions": true,
+    "act": true,
+    ".yarn": true,
     ".pnp.*": true,
-    "# ignore sdk stuff": true,
     ".vim": true
   },
+  "eslint.packageManager": "yarn",
+  "eslint.useESLintClass": true,
+  "licenser.author": "Qlever LLC",
+  "licenser.license": "AL2",
   "cSpell.words": [
-    "KSUID",
-    "lons",
-    "sonarjs"
-  ],
-  "licenser.useSingleLineStyle": false,
-  "licenser.author": "Open Ag Data Alliance",
-  "licenser.license": "MIT",
-  "eslint.nodePath": ".yarn/sdks"
+    "asns",
+    "Buildx",
+    "codeql",
+    "ksuid",
+    "ksuids",
+    "metas",
+    "MONITIS",
+    "OADA",
+    "Snyk",
+    "sonarjs",
+    "trellisfw"
+  ]
 }
