--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
     "@tsconfig/node16": "^1.0.2",
     "@types/convict": "^6.1.1",
     "@types/csv-parse": "^1.2.2",
-    "@types/debug": "^4",
-    "@types/jest": "^27.0.2",
+    "@types/debug": "^4.1.7",
+    "@types/jest": "^27.0.3",
     "@types/latlon-geohash": "^2.0.0",
-    "@types/node": "^16.11.6",
-    "@types/prettier": "^2.4.1",
+    "@types/node": "^16.11.8",
+    "@types/prettier": "^2.4.2",
     "@types/string-similarity": "^4.0.0",
-    "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
-    "@yarnpkg/sdks": "^2.5.0",
-    "eslint": "^7.32.0",
+    "@types/uuid": "^8.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "@yarnpkg/sdks": "^2.5.1-rc.1",
+    "chai": "^4.3.4",
+    "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-xo": "^0.39.0",
     "eslint-config-xo-typescript": "^0.47.1",
@@ -43,32 +44,31 @@
     "eslint-plugin-array-func": "^3.1.7",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-github": "^4.3.2",
+    "eslint-plugin-github": "^4.3.4",
     "eslint-plugin-i18n-text": "^1.0.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^25.2.2",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-no-constructor-bind": "^2.0.4",
     "eslint-plugin-no-only-tests": "^2.6.0",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-notice": "^0.9.10",
     "eslint-plugin-optimize-regex": "^1.2.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-regexp": "^1.5.0",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-sonarjs": "^0.10.0",
-    "eslint-plugin-unicorn": "^37.0.1",
+    "eslint-plugin-unicorn": "^38.0.1",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
-    "type-fest": "^2.5.2",
-    "typescript": "^4.4.4",
-    "xo": "^0.46.3"
+    "type-fest": "^2.5.4",
+    "typescript": "4.4"
   },
   "dependencies": {
-    "@oada/client": "^2.6.2",
+    "@oada/client": "^2.6.4",
     "convict": "^6.2.1",
-    "csv-parse": "^4.16.3",
+    "csv-parse": "^5.0.2",
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "fast-glob": "^3.2.7",
@@ -76,7 +76,7 @@
     "gps-time": "^1.0.8",
     "guess-file-type": "^1.0.1",
     "handlebars": "^4.7.7",
-    "ksuid": "^2.0.0",
+    "ksuid": "^3.0.0",
     "latlon-geohash": "^2.0.0",
     "moment": "^2.29.1",
     "node-stream-zip": "^1.15.0",
