--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,10 @@
   "recommendations": [
     "arcanis.vscode-zipfs",
     "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint"
+    "dbaeumer.vscode-eslint",
+    "gamunu.vscode-yarn",
+    "editorconfig.editorconfig",
+    "ms-azuretools.vscode-docker",
+    "loiane.ts-extension-pack"
   ]
 }
