--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -42,12 +42,16 @@ overrides:
       - plugin:import/typescript
       - xo-typescript
       - prettier
+    parserOptions:
+      ecmaVersion: 2020
+      project: './tsconfig.eslint.json'
     rules:
       '@typescript-eslint/naming-convention':
         [
           error,
           { selector: default, format: [camelCase] },
           { selector: objectLiteralProperty, format: null },
+          { selector: enumMember, format: [PascalCase] },
           { selector: typeProperty, format: null },
 
           {
@@ -98,6 +102,7 @@ rules:
   eslint-comments/no-use: off
   no-secrets/no-secrets: error
   no-empty-label: off
+  no-return-await: off
   no-warning-comments: off
   node/no-missing-import: off
   import/no-unresolved: off
